--- a/du_an_HTML/css/style.css
+++ b/du_an_HTML/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 * {
   padding: 0;
   border: 0;
@@ -8,12 +8,12 @@
 }
 
 html {
-  font-size: 16px;
+  font-size: 10px;
   scroll-behavior: smooth;
-  font-family: "Inter", sans-serif;
 }
 
 body {
+  font-family: "Inter", sans-serif;
   color: #2c2c2c;
   line-height: 1.25;
   font-size: 1.6rem;
@@ -46,6 +46,164 @@ h6 {
 
 .container {
   --container-width: 1200px;
+}
+
+.d-none {
+  display: none;
+}
+
+.d-block {
+  display: block;
+}
+
+@media screen and (min-width: 576px) {
+  .d-sm-none {
+    display: none;
+  }
+  .d-sm-block {
+    display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  .d-md-none {
+    display: none;
+  }
+  .d-md-block {
+    display: block;
+  }
+}
+@media screen and (min-width: 992px) {
+  .d-lg-none {
+    display: none;
+  }
+  .d-lg-block {
+    display: block;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .d-xl-none {
+    display: none;
+  }
+  .d-xl-block {
+    display: block;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .d-xxl-none {
+    display: none;
+  }
+  .d-xxl-block {
+    display: block;
+  }
+}
+.header {
+  padding: 10px 0;
+  box-shadow: 0px 1.667px 8.333px 0px rgba(0, 0, 0, 0.15);
+}
+.header .logo {
+  height: 99px;
+  overflow: hidden;
+}
+.header .header-nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.header .header-nav .menu > ul {
+  display: flex;
+}
+.header .header-nav .menu > ul > li {
+  padding: 0 25px;
+}
+.header .header-nav .menu > ul > li > a {
+  font-weight: 600;
+}
+.header .header-nav .menu > ul > li.active > a, .header .header-nav .menu > ul > li:hover > a {
+  color: #46b20f;
+  padding-bottom: 50px;
+  border-bottom: 1.667px solid #46b20f;
+}
+.header .header-nav .menu-overlay {
+  opacity: 0;
+  visibility: hidden;
+}
+.header .header-nav .cart-icon {
+  padding: 0 25px;
+}
+.header .header-nav .cart-icon a {
+  display: block;
+  position: relative;
+}
+.header .header-nav .cart-icon a span {
+  font-size: 1.2rem;
+  color: #fff;
+  background-color: #ff6916;
+  padding: 1px 4px;
+  border-radius: 50%;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+}
+.header .header-nav .search-icon {
+  padding-left: 25px;
+}
+
+@media screen and (max-width: 991.98px) {
+  .header .logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .header .menu-toggle {
+    font-size: 2rem;
+  }
+  .header .header-nav .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 2;
+    background: #46b20f;
+    min-width: 250px;
+    padding: 15px 0;
+    translate: -100%;
+    transition: translate 0.4s ease-in-out;
+  }
+  .header .header-nav .menu ul {
+    display: block;
+  }
+  .header .header-nav .menu ul li {
+    padding: 0;
+  }
+  .header .header-nav .menu ul li.active > a, .header .header-nav .menu > ul > li:hover > a {
+    padding-bottom: 10px;
+  }
+  .header .header-nav .menu ul li a {
+    color: #fff !important;
+    display: block;
+    padding: 10px 20px;
+  }
+  .header .header-nav .menu-overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.3882352941);
+    z-index: 1;
+    transition: 0.3s ease-in-out;
+    transition-property: opacity, visibility;
+  }
+  .header .header-nav .cart-icon {
+    padding: 0 10px;
+  }
+  .header .header-nav .search-icon {
+    padding-left: 10px;
+  }
+  .header .header-nav input[type=checkbox]:checked ~ .menu {
+    translate: 0;
+  }
+  .header .header-nav input[type=checkbox]:checked ~ .menu-overlay {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
