--- a/du_an_HTML/scss/parts/_base.scss
+++ b/du_an_HTML/scss/parts/_base.scss
@@ -1,3 +1,11 @@
 .container {
     --container-width: 1200px;
 }
+
+@include display;
+
+@each $name, $breakponts in $breakpoints {
+    @media screen and (min-width: #{$breakponts}px) {
+        @include display($name);
+    }
+}
