--- a/du_an_HTML/scss/layouts/_header.scss
+++ b/du_an_HTML/scss/layouts/_header.scss
@@ -1,6 +1,8 @@
 .header {
     padding: 10px 0;
     box-shadow: 0px 1.667px 8.333px 0px rgba(0, 0, 0, 0.15);
+    position: relative;
+    z-index: 2;
     .logo {
         height: 99px;
         overflow: hidden;
