--- a/du_an_HTML/scss/style.scss
+++ b/du_an_HTML/scss/style.scss
@@ -9,9 +9,9 @@
 @import "layouts/header";
 @import "layouts/footer";
 
-
 // Import Pages
 
 // 1. Home
-@import "pages/home/hero.scss"
-
+@import "pages/home/hero.scss";
+@import "pages/home/counter.scss";
+@import "pages/home/products";
