--- a/du_an_HTML/css/style.css
+++ b/du_an_HTML/css/style.css
@@ -24,6 +24,9 @@ a {
   text-decoration: none;
   color: #2c2c2c;
 }
+a:hover {
+  color: #46b20f;
+}
 
 img {
   max-width: 100%;
@@ -43,10 +46,6 @@ h5,
 h6 {
   color: #2c2c2c;
   margin: 20px 0;
-}
-
-.container {
-  --container-width: 1200px;
 }
 
 .d-none {
@@ -97,6 +96,24 @@ h6 {
     display: block;
   }
 }
+.container {
+  --container-width: 1200px;
+}
+
+.btn {
+  color: #fff;
+  padding: 13.333px 11.667px;
+  border-radius: 6.667px;
+  font-weight: 700;
+  display: inline-block;
+}
+.btn.btn-primary {
+  background: #46b20f;
+}
+.btn:hover {
+  color: #fff;
+}
+
 .header {
   padding: 10px 0;
   box-shadow: 0px 1.667px 8.333px 0px rgba(0, 0, 0, 0.15);
@@ -158,7 +175,11 @@ h6 {
     justify-content: center;
   }
   .header .menu-toggle {
-    font-size: 2rem;
+    margin-left: 20px;
+    font-size: 3rem;
+  }
+  .header .header-nav {
+    margin-right: 20px;
   }
   .header .header-nav .menu {
     position: fixed;
@@ -223,7 +244,7 @@ h6 {
   font-size: 4.3rem;
 }
 .hero .hero-text p {
-  max-width: 75%;
+  max-width: 77%;
 }
 .hero .hero-image {
   background: #dcffca;
@@ -234,20 +255,283 @@ h6 {
   position: relative;
 }
 .hero .hero-image span {
-  width: 40%;
   color: #216000;
   font-size: 15.6rem;
   font-weight: 800;
   opacity: 0.15;
   transform: rotate(90deg);
   line-height: 1;
+  display: inline-block;
   position: absolute;
-  left: 400px;
+  top: 0;
+  bottom: 0;
+  left: 35px;
 }
 .hero .hero-image img {
-  width: 65%;
+  width: 432px;
   margin-top: 30px;
   margin-left: -80px;
+}
+
+@media screen and (max-width: 1399.98px) {
+  .hero .hero-image img {
+    width: 350px;
+    margin-left: -60px;
+  }
+  .hero .hero-image span {
+    font-size: 14rem;
+    left: -5%;
+  }
+}
+@media screen and (max-width: 1199.98px) {
+  .hero .hero-image span {
+    font-size: 10rem;
+    left: -20%;
+    top: -20%;
+  }
+}
+@media screen and (max-width: 991.98px) {
+  .hero .hero-text {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .hero .hero-text p {
+    margin: 0 auto;
+    max-width: 80%;
+    text-align: justify;
+  }
+  .hero .hero-image {
+    width: 100%;
+    border-radius: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero .hero-image img {
+    width: 380px;
+    margin: 0 -50px 0 0;
+  }
+  .hero .hero-image span {
+    position: static;
+    font-size: 13rem;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .hero .hero-image {
+    text-align: center;
+    min-height: auto;
+    display: block;
+  }
+  .hero .hero-image img {
+    margin: 0 auto;
+    max-width: 70%;
+    display: block;
+  }
+  .hero .hero-image span {
+    position: static;
+    transform: rotate(0deg);
+    font-size: 8rem;
+    display: block;
+  }
+  .hero .hero-image span br {
+    display: none;
+  }
+}
+@media screen and (max-width: 575.98px) {
+  .hero .hero-image span br {
+    display: block;
+  }
+}
+.counter {
+  padding: 100px 0;
+}
+.counter .counter-heading {
+  max-width: 53%;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 110px;
+}
+.counter .counter-heading h2 {
+  margin-bottom: 24px;
+  font-size: 3.1rem;
+  line-height: 1.3;
+}
+.counter .counter-list .counter-item {
+  background-color: #fff;
+  padding: 33.33px;
+  box-shadow: -5.833px 8.333px 72.5px 0px rgba(54, 54, 54, 0.12);
+  position: relative;
+}
+.counter .counter-list .counter-item .counter-icon {
+  background-color: #fff0e7;
+  padding: 19.17px;
+  border-radius: 10px;
+  display: inline-block;
+}
+.counter .counter-list .counter-item span {
+  display: block;
+}
+.counter .counter-list .counter-item span.counter-number {
+  padding: 23.33px 0;
+  font-size: 4.3rem;
+  font-weight: 800;
+}
+.counter .counter-list [class^=col-]:nth-child(1) .counter-item::before {
+  content: "";
+  background: #dcffca;
+  width: 235px;
+  height: 235px;
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  translate: -50% -50%;
+  z-index: -1;
+}
+.counter .counter-list [class^=col-]:nth-child(2) .counter-item {
+  padding-top: 60.83px;
+  padding-bottom: 60.83px;
+  max-width: 89%;
+  margin: 0 auto;
+}
+.counter .counter-list [class^=col-]:nth-child(2) .counter-item .counter-icon {
+  background-color: #f2ffec;
+}
+.counter .counter-list [class^=col-]:nth-child(3) .counter-item::after {
+  content: "";
+  background: #ffd5bd;
+  width: 235px;
+  height: 235px;
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  translate: 50% 60%;
+  z-index: -1;
+}
+
+@media screen and (max-width: 991.98px) {
+  .counter .counter-heading h2 br {
+    display: none;
+  }
+  .counter .counter-list .counter-item {
+    text-align: center;
+    margin: 0 auto 20px !important;
+    max-width: 80% !important;
+    padding: 33.33px !important;
+  }
+  .counter .counter-list .counter-item::before, .counter .counter-list .counter-item::after {
+    display: none !important;
+  }
+}
+.products {
+  padding: 64px 0;
+}
+.products h2 {
+  text-align: center;
+  font-size: 3.1rem;
+  font-weight: 800;
+  margin-bottom: 50px;
+}
+.products .products-list .product-item {
+  margin-top: 114px;
+  margin-bottom: 96px;
+  max-width: 70%;
+  text-align: center;
+}
+.products .products-list .product-item .image {
+  position: relative;
+}
+.products .products-list .product-item .image img {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+}
+.products .products-list .product-item .image::before {
+  content: "";
+  display: block;
+  background: #ffba94;
+  width: 269.316px;
+  height: 269.316px;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  translate: 0 -40%;
+}
+.products .products-list .product-item .name {
+  font-size: 2.3rem;
+  font-weight: 700;
+  margin-bottom: 29.48px;
+  margin-top: 17.19px;
+}
+.products .products-list .product-item .name::after {
+  content: "";
+  display: block;
+  width: 40.883px;
+  height: 1.667px;
+  background: #a3a3a3;
+  max-width: 100%;
+  margin: 0 auto;
+  margin-top: 12.81px;
+}
+.products .products-list .product-item .quantity {
+  color: #656565;
+  margin-bottom: 6.33px;
+}
+.products .products-list .product-item .price {
+  margin-bottom: 31px;
+}
+.products .products-list .product-item .price span {
+  font-size: 2.3rem;
+  font-weight: 600;
+}
+.products .products-list [class^=col-]:nth-child(3n+1) .product-item {
+  margin-left: auto;
+}
+.products .products-list [class^=col-]:nth-child(3n+2) .product-item {
+  margin-left: auto;
+  margin-right: auto;
+}
+.products .products-list [class^=col-]:nth-child(3n+2) .product-item .image::before {
+  background: #c5ffa8;
+}
+
+@media screen and (max-width: 991.98px) {
+  .products {
+    padding: 0 0 30px;
+  }
+  .products h2 {
+    margin: 0 0 20px;
+  }
+  .products .products-list .product-item {
+    max-width: 100%;
+    margin: 0 0 15px;
+  }
+  .products .products-list .product-item .image::before {
+    display: none;
+  }
+}
+@media screen and (max-width: 575.98px) {
+  .products .products-list .product-item .name,
+  .products .products-list .product-item .price span {
+    font-size: 1.6rem;
+  }
+  .products .products-list .product-item .name a {
+    max-height: 44px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+  .products .products-list .product-item .add-to-cart .btn {
+    font-size: 1.4rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
