--- a/du_an_HTML/scss/layouts/_header.scss
+++ b/du_an_HTML/scss/layouts/_header.scss
@@ -69,9 +69,11 @@
         }
 
         .menu-toggle {
-            font-size: 2rem;
+            margin-left: 20px;
+            font-size: 3rem;
         }
         .header-nav {
+            margin-right: 20px;
             .menu {
                 position: fixed;
                 top: 0;
