--- a/du_an_HTML/scss/parts/_base.scss
+++ b/du_an_HTML/scss/parts/_base.scss
@@ -1,11 +1,25 @@
-.container {
-    --container-width: 1200px;
-}
-
 @include display;
 
 @each $name, $breakponts in $breakpoints {
     @media screen and (min-width: #{$breakponts}px) {
         @include display($name);
+    }
+}
+
+.container {
+    --container-width: 1200px;
+}
+
+.btn {
+    color: #fff;
+    padding: 13.333px 11.667px;
+    border-radius: 6.667px;
+    font-weight: 700;
+    display: inline-block;
+    &.btn-primary {
+        background: $primaryColor;
+    }
+    &:hover {
+        color: #fff;
     }
 }
