--- a/du_an_HTML/scss/style.scss
+++ b/du_an_HTML/scss/style.scss
@@ -14,4 +14,8 @@
 // 1. Home
 @import "pages/home/hero.scss";
 @import "pages/home/counter.scss";
-@import "pages/home/products";
+@import "pages/home/products.scss";
+@import "pages/home/posts.scss";
+@import "pages/home/feature.scss";
+@import "pages/home/quality.scss";
+@import "pages/home/contact.scss";
