--- a/du_an_HTML/scc/style.css
+++ b/du_an_HTML/scc/style.css
@@ -45,6 +45,7 @@ h4,
 h5,
 h6 {
   color: #2c2c2c;
+  margin: 20px 0;
 }
 
 .d-none {
@@ -108,20 +109,6 @@ h6 {
 }
 .btn.btn-primary {
   background: #46b20f;
-}
-.btn.btn-primary:hover {
-  background: #ff6916;
-}
-.btn.btn-outline-primary {
-  color: #2c2c2c;
-  padding: 11.667px 21.667px;
-  border: 1px solid #46b20f;
-}
-.btn.btn-outline-primary:hover {
-  background: #46b20f;
-}
-.btn.btn-outline-primary:hover svg path {
-  fill: #fff;
 }
 .btn:hover {
   color: #fff;
@@ -544,295 +531,6 @@ h6 {
   }
   .products .products-list .product-item .add-to-cart .btn {
     font-size: 1.4rem;
-  }
-}
-.posts {
-  padding: 64px 0;
-}
-.posts .posts-heading {
-  max-width: 54%;
-  margin: 0 auto;
-  text-align: center;
-}
-.posts .posts-heading h2 {
-  margin: 0;
-  font-size: 3.1rem;
-  font-weight: 800;
-}
-.posts .posts-heading p {
-  margin: 23px 0 28px;
-}
-.posts .posts-list .post-item .image img {
-  border-radius: 6.667px;
-}
-.posts .posts-list .post-item .meta {
-  margin: 16.27px 0 18.67px;
-  display: flex;
-  justify-content: space-between;
-}
-.posts .posts-list .post-item .meta li:first-child a {
-  color: #46b20f;
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-.posts .posts-list .post-item .meta li:last-child {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.posts .posts-list .post-item .meta li:last-child span {
-  color: #a3a3a3;
-  font-weight: 500;
-  font-size: 1.5rem;
-}
-.posts .posts-list .post-item .meta li:last-child svg {
-  vertical-align: top;
-}
-.posts .posts-list .post-item .title {
-  font-size: 2rem;
-  font-weight: 600;
-  margin-bottom: 16.27px;
-}
-.posts .posts-more {
-  text-align: center;
-}
-.posts .posts-more a {
-  margin-top: 79.67px;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@media screen and (max-width: 991.98px) {
-  .posts {
-    padding: 30px;
-  }
-  .posts .posts-heading {
-    max-width: 80%;
-    text-align: justify;
-  }
-  .posts .posts-heading h2 {
-    text-align: center;
-  }
-  .posts .posts-more {
-    margin-top: 0;
-  }
-}
-@media screen and (max-width: 767.98px) {
-  .posts {
-    padding: 20px 0;
-  }
-  .posts .posts-list .post-item {
-    margin-bottom: 25px;
-  }
-  .posts .posts-more a {
-    margin-top: 30px;
-  }
-}
-@media screen and (max-width: 575.98px) {
-  .posts .posts-list .post-item .image img {
-    width: 100%;
-  }
-}
-.feature {
-  padding: 36px 0 116px;
-  position: relative;
-}
-.feature::after {
-  content: "";
-  background: #fff0e7;
-  border-radius: 8.333px;
-  display: block;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 50%;
-  z-index: -1;
-}
-.feature .feature-heading {
-  text-align: center;
-  max-width: 49.8%;
-  margin: 0 auto;
-  margin-bottom: 50px;
-}
-.feature .feature-heading h2 {
-  font-size: 3.1rem;
-  font-weight: 800;
-  margin-bottom: 24.33px;
-}
-.feature .feature-list {
-  display: flex;
-  justify-content: center;
-  column-gap: 25px;
-}
-.feature .feature-list .feature-item {
-  flex-basis: 28%;
-  max-width: 28%;
-  background: #fff;
-  border-radius: 8.333px;
-}
-.feature .feature-list .feature-item .image {
-  margin-bottom: 24.17px;
-}
-.feature .feature-list .feature-item .image img {
-  display: block;
-  border-radius: 8.333px;
-}
-.feature .feature-list .feature-item .info {
-  padding: 0 18.33px 5px 27.5px;
-}
-.feature .feature-list .feature-item .info h3 {
-  font-size: 2rem;
-  font-weight: 600;
-  color: #ff6916;
-  margin-bottom: 6.33px;
-}
-
-@media screen and (max-width: 1199.98px) {
-  .feature {
-    padding: 25px 0;
-  }
-  .feature .feature-heading {
-    max-width: 90%;
-  }
-}
-@media screen and (max-width: 767.98px) {
-  .feature .feature-list {
-    flex-wrap: wrap;
-  }
-  .feature .feature-list .feature-item {
-    flex-basis: calc(50% - 25px);
-    max-width: calc(50% - 25px);
-    margin-bottom: 25px;
-  }
-  .feature::after {
-    top: 0;
-  }
-}
-@media screen and (max-width: 575.98px) {
-  .feature .feature-list .feature-item {
-    flex-basis: 100%;
-    max-width: 100%;
-  }
-  .feature .feature-list .image img {
-    margin: 0 auto;
-    width: 90%;
-  }
-}
-.quality {
-  padding: 133px 0;
-}
-.quality .quality-list .quality-item {
-  max-width: 75%;
-  margin: 0 auto;
-  margin-bottom: 38.83px;
-  display: flex;
-  column-gap: 15.83px;
-}
-.quality .quality-list .quality-item h3 {
-  margin-bottom: 6.67px;
-  font-size: 2rem;
-  font-weight: 600;
-}
-.quality .quality-list .quality-item p {
-  font-size: 1.7rem;
-  font-family: 500;
-}
-.quality .quality-list [class^=col-]:nth-child(3n+1) .quality-item {
-  margin-left: auto;
-  margin-right: initial;
-}
-.quality .quality-list [class^=col-]:nth-child(3n+3) .quality-item {
-  margin-right: auto;
-  margin-left: initial;
-}
-
-@media screen and (max-width: 1199.98px) {
-  .quality .quality-list .quality-item {
-    margin-left: auto !important;
-    margin-right: auto !important;
-  }
-}
-@media screen and (max-width: 991.98px) {
-  .quality {
-    padding: 70px 0;
-  }
-}
-@media screen and (max-width: 575.98px) {
-  .quality .quality .quality-item {
-    max-width: 90%;
-  }
-}
-.contact {
-  padding-bottom: 101px;
-}
-.contact .image {
-  max-width: 83%;
-}
-.contact .form {
-  margin-top: 55px;
-}
-.contact .form .form-heading {
-  font-size: 2rem;
-  font-weight: 600;
-  line-height: 1.3;
-  margin-bottom: 26px;
-}
-.contact .form .form-group {
-  margin-bottom: 22.67px;
-}
-.contact .form .form-group .form-control {
-  width: 100%;
-  padding: 13.333px;
-  border: 0.833px solid #a3a3a3;
-  border-radius: 6.667px;
-}
-.contact .form .form-group .form-control::placeholder {
-  color: #a3a3a3;
-}
-.contact .form .form-group textarea {
-  margin-bottom: 3.38px;
-  min-height: 149px;
-  font-family: "Inter", sans-serif;
-  resize: none;
-}
-.contact .form .group-row {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 22.67px;
-}
-.contact .form .group-row .form-group {
-  flex-grow: 1;
-}
-.contact .form .form-btn {
-  display: flex;
-  justify-content: flex-end;
-}
-.contact .form .form-btn .btn {
-  min-width: 128px;
-  padding: 13.33px 11.67px;
-  font-weight: 700;
-  cursor: pointer;
-  display: block;
-}
-
-@media screen and (max-width: 991.98px) {
-  .contact {
-    padding-bottom: 30px;
-  }
-  .contact .form {
-    margin-top: 0;
-  }
-  .contact .form .form-heading {
-    text-align: center;
-  }
-  .contact .form .form-btn {
-    display: block;
-  }
-  .contact .form .form-btn .btn {
-    width: 90%;
-    margin: 0 auto;
   }
 }
 
