--- a/du_an_HTML/scss/style.scss
+++ b/du_an_HTML/scss/style.scss
@@ -19,3 +19,6 @@
 @import "pages/home/feature.scss";
 @import "pages/home/quality.scss";
 @import "pages/home/contact.scss";
+
+// 2. Green chop
+@import "pages/greenchop/greenchoptitle.scss";
