--- a/du_an_HTML/css/style.css
+++ b/du_an_HTML/css/style.css
@@ -242,6 +242,88 @@ h6 {
     visibility: visible;
   }
 }
+.footer {
+  background: #f2ffec;
+  padding-top: 66px;
+  padding-bottom: 40px;
+}
+.footer .footer-inner,
+.footer .footer-bottom {
+  max-width: 83%;
+  margin: 0 auto;
+}
+.footer .footer-inner::after {
+  content: "";
+  max-width: 98%;
+  margin: 0 auto;
+  margin-top: 72.5px;
+  display: block;
+  height: 1.67px;
+  background: #a3a3a3;
+}
+.footer .footer-inner .footer-item .logo {
+  margin-bottom: 24.58px;
+}
+.footer .footer-inner .footer-item p {
+  margin-bottom: 6.67px;
+}
+.footer .footer-inner .footer-item p.title {
+  color: #46b20f;
+  margin-bottom: 13px;
+  font-weight: 600;
+}
+.footer .footer-inner .footer-item ul li {
+  margin-bottom: 6.67px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.footer .footer-inner .footer-item ul li svg {
+  flex-basis: 20px;
+  margin-right: 10px;
+}
+.footer .footer-inner .footer-item ul li span {
+  flex-basis: calc(100% - 30px);
+}
+.footer .footer-bottom {
+  padding-top: 24.17px;
+}
+.footer .footer-bottom .socials {
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  column-gap: 6.67px;
+}
+.footer .footer-bottom .socials li a {
+  width: 40px;
+  height: 40px;
+  background: #dcffca;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .footer .footer-inner::after {
+    margin-top: 15px;
+  }
+  .footer .footer-inner .footer-item {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 575.98px) {
+  .footer .footer-bottom a {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer .footer-bottom .socials {
+    justify-content: center;
+    align-items: center;
+  }
+}
 .hero {
   position: relative;
   z-index: 1;
