--- a/du_an_HTML/scss/style.scss
+++ b/du_an_HTML/scss/style.scss
@@ -22,3 +22,6 @@
 
 // 2. Green chop
 @import "pages/greenchop/greenchoptitle.scss";
+@import "pages/greenchop/about-greenchop.scss";
+@import "pages/greenchop/product-main.scss";
+@import "pages/greenchop/mission-greenchop.scss";
