--- a/du_an_HTML/css/style.css
+++ b/du_an_HTML/css/style.css
@@ -388,7 +388,14 @@ h6 {
 @media screen and (max-width: 991.98px) {
   .hero .hero-text {
     text-align: center;
-    margin-bottom: 20px;
+    margin: 50px 0;
+  }
+  .hero .hero-text h1,
+  .hero .hero-text h2 {
+    margin-bottom: 15px;
+  }
+  .hero .hero-text h2 {
+    font-size: 3.1rem;
   }
   .hero .hero-text p {
     margin: 0 auto;
@@ -507,7 +514,19 @@ h6 {
   z-index: -1;
 }
 
+@media screen and (max-width: 1199.98px) {
+  .counter .counter-list .counter-item::before, .counter .counter-list .counter-item::after {
+    display: none !important;
+  }
+}
 @media screen and (max-width: 991.98px) {
+  .counter {
+    padding: 30px 0;
+  }
+  .counter .counter-heading {
+    margin-bottom: 50px;
+    max-width: 80%;
+  }
   .counter .counter-heading h2 br {
     display: none;
   }
@@ -517,8 +536,10 @@ h6 {
     max-width: 80% !important;
     padding: 33.33px !important;
   }
-  .counter .counter-list .counter-item::before, .counter .counter-list .counter-item::after {
-    display: none !important;
+}
+@media screen and (max-width: 767.98px) {
+  .counter .counter-heading p {
+    text-align: justify;
   }
 }
 .products {
@@ -914,6 +935,309 @@ h6 {
   }
   .contact .form .form-btn .btn {
     width: 90%;
+    margin: 0 auto;
+  }
+}
+.greenchop-title {
+  background: #f2ffec;
+  width: 100%;
+  height: 166.667px;
+  display: flex;
+  align-items: center;
+}
+.greenchop-title h1 {
+  margin-left: 200px;
+  font-size: 4.3rem;
+  font-weight: 700;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .greenchop-title {
+    justify-content: center;
+  }
+  .greenchop-title h1 {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 991.98px) {
+  .greenchop-title {
+    height: 130px;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .greenchop-title h1 {
+    font-size: 3.1rem;
+  }
+}
+.about-greenchop {
+  margin-bottom: 100px;
+}
+.about-greenchop .container .title {
+  text-align: center;
+}
+.about-greenchop .container .title h2 {
+  margin-bottom: 24.67px;
+}
+.about-greenchop .container .info-greenchop {
+  margin-bottom: 50.74px;
+}
+.about-greenchop .container .info-greenchop:nth-child(2) .row {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+}
+.about-greenchop .container .info-greenchop:nth-child(2) .row .image img {
+  width: 479.167px;
+}
+.about-greenchop .container .info-greenchop:nth-child(2) .row .info p {
+  max-width: 75%;
+  font-size: 1.3rem;
+  line-height: 1.43;
+}
+.about-greenchop .container .info-greenchop:nth-child(3) .row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about-greenchop .container .info-greenchop:nth-child(3) .image img {
+  width: 377.5px;
+}
+.about-greenchop .container .info-greenchop:nth-child(3) .info p {
+  max-width: 88%;
+  font-size: 1.3rem;
+  line-height: 1.43;
+}
+.about-greenchop .container .info-greenchop:nth-child(3) .info p:nth-child(1) {
+  margin-bottom: 20px;
+}
+.about-greenchop .container .info-greenchop:nth-child(4) .row {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+}
+.about-greenchop .container .info-greenchop:nth-child(4) .image {
+  display: flex;
+  justify-content: end;
+}
+.about-greenchop .container .info-greenchop:nth-child(4) .image img {
+  width: 394.534px;
+}
+.about-greenchop .container .info-greenchop:nth-child(4) .info p {
+  max-width: 75%;
+  font-size: 1.3rem;
+  line-height: 1.43;
+}
+.about-greenchop .container .info-greenchop:nth-child(4) .info p:nth-child(1) {
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 991.98px) {
+  .about-greenchop .container .info-greenchop:nth-child(2) .row {
+    flex-direction: column;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(2) .row .image {
+    display: flex;
+    justify-content: center;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(2) .row .image img {
+    max-width: 90%;
+    margin-bottom: 10px;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(2) .row .info p {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(3) .row {
+    flex-direction: column;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(3) .row .image {
+    display: flex;
+    justify-content: center;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(3) .row .image img {
+    max-width: 90%;
+    margin-bottom: 10px;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(3) .row .info p {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(3) .row .info p:nth-child(1) {
+    margin-bottom: 10px;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(4) .row {
+    flex-direction: column;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(4) .row .image {
+    justify-content: center;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(4) .row .image img {
+    max-width: 90%;
+    margin-bottom: 10px;
+  }
+  .about-greenchop .container .info-greenchop:nth-child(4) .row .info p {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+}
+.product-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product-main .cover {
+  max-width: 1600px;
+  height: 391.667px;
+  background-image: url("/du_an_HTML/images/family-img.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+}
+.product-main .cover::after {
+  content: "";
+  background-color: #000000;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+.product-main .cover .info-main {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.product-main .cover .info-main h2 {
+  color: #fff;
+  padding: 70px 0 49.67px;
+  font-size: 3.1rem;
+  font-weight: 800;
+  text-align: center;
+}
+.product-main .cover .info-main p {
+  padding-bottom: 70px;
+  max-width: 50%;
+  line-height: 1.35;
+  text-align: center;
+}
+.product-main .cover .info-main .above-quotes {
+  position: absolute;
+  top: 115.83px;
+  left: 16%;
+}
+.product-main .cover .info-main .below-quotes {
+  position: absolute;
+  right: 16%;
+  top: 240.83px;
+}
+
+@media screen and (max-width: 1399.98px) {
+  .product-main .cover .info-main .above-quotes {
+    left: 12%;
+  }
+  .product-main .cover .info-main .below-quotes {
+    right: 12%;
+  }
+}
+@media screen and (max-width: 1199.98px) {
+  .product-main .cover {
+    height: auto;
+  }
+}
+@media screen and (max-width: 991.98px) {
+  .product-main .cover .info-main h2 {
+    max-width: 90%;
+    padding: 40px 0 20px;
+  }
+  .product-main .cover .info-main p {
+    max-width: 70%;
+    padding-bottom: 40px;
+    text-align: justify;
+  }
+  .product-main .cover .info-main .above-quotes,
+  .product-main .cover .info-main .below-quotes {
+    display: none;
+  }
+}
+.mission-greenchop .row {
+  margin-top: 100px;
+  margin-bottom: 232.98px;
+}
+.mission-greenchop .row .image {
+  display: flex;
+  justify-content: end;
+  position: relative;
+}
+.mission-greenchop .row .image img {
+  width: 400px;
+}
+.mission-greenchop .row .image::before {
+  content: "";
+  display: block;
+  background: #dcffca;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  position: absolute;
+  top: 75.83px;
+  right: 185.83px;
+  z-index: -2;
+}
+.mission-greenchop .row .image::after {
+  content: "";
+  display: block;
+  background: #ffd5bd;
+  width: 220px;
+  height: 220px;
+  border-radius: 50%;
+  position: absolute;
+  top: 278.33px;
+  right: 125px;
+  z-index: -1;
+}
+.mission-greenchop .row .info {
+  margin-left: 71.67px;
+}
+.mission-greenchop .row .info h2 {
+  margin: 66.67px 0 26.33px;
+  font-size: 3.1rem;
+  font-weight: 800;
+}
+.mission-greenchop .row .info p {
+  text-align: justify;
+  max-width: 67%;
+  font-size: 1.3rem;
+  line-height: 1.43;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .mission-greenchop .row .image::after, .mission-greenchop .row .image::before {
+    display: none;
+  }
+}
+@media screen and (max-width: 991.98px) {
+  .mission-greenchop .row {
+    margin: 50px 0;
+  }
+  .mission-greenchop .row .image {
+    justify-content: center;
+  }
+  .mission-greenchop .row .info {
+    margin: 0 auto;
+  }
+  .mission-greenchop .row .info h2 {
+    text-align: center;
+    margin: 20px 0;
+  }
+  .mission-greenchop .row .info p {
+    max-width: 90%;
     margin: 0 auto;
   }
 }
