--- a/du_an_HTML/scss/pages/home/_counter.scss
+++ b/du_an_HTML/scss/pages/home/_counter.scss
@@ -84,9 +84,25 @@
     }
 }
 
+@media screen and (max-width: 1199.98px) {
+    .counter {
+        .counter-list {
+            .counter-item {
+                &::before,
+                &::after {
+                    display: none !important;
+                }
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 991.98px) {
     .counter {
+        padding: 30px 0;
         .counter-heading {
+            margin-bottom: 50px;
+            max-width: 80%;
             h2 {
                 br {
                     display: none;
@@ -100,10 +116,16 @@
                 margin: 0 auto 20px !important;
                 max-width: 80% !important;
                 padding: 33.33px !important;
-                &::before,
-                &::after {
-                    display: none !important;
-                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 767.98px) {
+    .counter {
+        .counter-heading {
+            p {
+                text-align: justify;
             }
         }
     }
