--- a/du_an_HTML/scss/pages/home/_hero.scss
+++ b/du_an_HTML/scss/pages/home/_hero.scss
@@ -77,7 +77,14 @@
     .hero {
         .hero-text {
             text-align: center;
-            margin-bottom: 20px;
+            margin: 50px 0;
+            h1,
+            h2 {
+                margin-bottom: 15px;
+            }
+            h2 {
+                font-size: 3.1rem;
+            }
             p {
                 margin: 0 auto;
                 max-width: 80%;
