--- a/du_an_HTML/scss/style.scss
+++ b/du_an_HTML/scss/style.scss
@@ -21,7 +21,10 @@
 @import "pages/home/contact.scss";
 
 // 2. Green chop
-@import "pages/greenchop/greenchoptitle.scss";
+@import "pages/greenchop/greenchop-title.scss";
 @import "pages/greenchop/about-greenchop.scss";
 @import "pages/greenchop/product-main.scss";
 @import "pages/greenchop/mission-greenchop.scss";
+
+// 3. Products
+@import "pages/products/product-title.scss";
