--- a/du_an_HTML/css/style.css
+++ b/du_an_HTML/css/style.css
@@ -543,7 +543,7 @@ h6 {
   }
 }
 .products {
-  padding: 64px 0;
+  padding-top: 64px;
 }
 .products h2 {
   text-align: center;
@@ -966,7 +966,7 @@ h6 {
 }
 @media screen and (max-width: 767.98px) {
   .greenchop-title h1 {
-    font-size: 3.1rem;
+    font-size: 3.5rem;
   }
 }
 .about-greenchop {
@@ -1240,6 +1240,70 @@ h6 {
     max-width: 90%;
     margin: 0 auto;
   }
+}
+.products-title {
+  background: #f2ffec;
+  width: 100%;
+  height: 166.667px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.products-title h1 {
+  margin-left: 200px;
+  font-size: 4.3rem;
+  font-weight: 700;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .products-title {
+    justify-content: center;
+  }
+  .products-title h1 {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 991.98px) {
+  .products-title {
+    height: 130px;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .products-title h1 {
+    font-size: 3.5rem;
+  }
+}
+.feature-products .row {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 30px;
+}
+.feature-products .row .info {
+  margin-left: 20px;
+  flex-direction: column;
+  position: relative;
+}
+.feature-products .row .info h2 {
+  margin-bottom: 15.17px;
+  font-size: 3.1rem;
+  font-weight: 800;
+}
+.feature-products .row .info p {
+  max-width: 60%;
+  font-size: 1.3rem;
+  line-height: 1.43;
+}
+.feature-products .row .info svg {
+  width: 162.5px;
+  position: absolute;
+  z-index: -1;
+  top: -33px;
+  left: -52px;
+}
+.feature-products .row .image img {
+  width: 503.333px;
+  border-radius: 6.667px;
 }
 
 /*# sourceMappingURL=style.css.map */
