--- a/du_an_HTML/scss/style.scss
+++ b/du_an_HTML/scss/style.scss
@@ -30,3 +30,4 @@
 @import "pages/products/products-title.scss";
 @import "pages/products/feature-products.scss";
 @import "pages/products/use-products.scss";
+@import "pages/products/discribe-products.scss";
