--- a/du_an_HTML/scss/style.scss
+++ b/du_an_HTML/scss/style.scss
@@ -31,3 +31,4 @@
 @import "pages/products/feature-products.scss";
 @import "pages/products/use-products.scss";
 @import "pages/products/discribe-products.scss";
+@import "pages/products/rule5k-products.scss";
