--- a/du_an_HTML/scss/pages/products/_use-products.scss
+++ b/du_an_HTML/scss/pages/products/_use-products.scss
@@ -20,7 +20,7 @@
             display: flex;
             justify-content: center;
             margin-bottom: 100px;
-            .col-3 {
+            .col-xl-3 {
                 position: relative;
                 &:nth-child(1),
                 &:nth-child(2),
@@ -56,6 +56,65 @@
                         line-height: 1.43;
                     }
                 }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1199.98px) {
+    .use-products {
+        .use-title {
+            h2 {
+                margin-top: 50px;
+                margin-bottom: 20px;
+            }
+            p {
+                margin: 0 auto 50px;
+                max-width: 80%;
+            }
+        }
+
+        .step-use {
+            .row {
+                margin-bottom: 50px;
+                .col-xl-3 {
+                    margin-bottom: 20px;
+                    &:nth-child(1),
+                    &:nth-child(2),
+                    &:nth-child(3),
+                    &:nth-child(4) {
+                        &::before {
+                            display: none;
+                        }
+                    }
+
+                    .step {
+                        display: flex;
+                        justify-content: center;
+                        .image {
+                            margin-right: 10px;
+                            img {
+                                width: 115px;
+                                height: auto;
+                            }
+                        }
+                        p {
+                            max-width: 52%;
+                            font-size: 1.3rem;
+                            line-height: 1.43;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 767.98px) {
+    .use-products {
+        .step-use {
+            .row {
+                margin-bottom: 25px;
             }
         }
     }
