--- a/du_an_HTML/scss/style.scss
+++ b/du_an_HTML/scss/style.scss
@@ -32,3 +32,6 @@
 @import "pages/products/use-products.scss";
 @import "pages/products/discribe-products.scss";
 @import "pages/products/rule5k-products.scss";
+
+// 4. News
+@import "pages/news/news-title.scss";
