--- a/du_an_HTML/css/style.css
+++ b/du_an_HTML/css/style.css
@@ -1624,5 +1624,36 @@ h6 {
     flex-direction: column-reverse;
   }
 }
+.news-title {
+  background: #f2ffec;
+  width: 100%;
+  height: 166.667px;
+  display: flex;
+  align-items: center;
+}
+.news-title h1 {
+  margin-left: 200px;
+  font-size: 4.3rem;
+  font-weight: 700;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .news-title {
+    justify-content: center;
+  }
+  .news-title h1 {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 991.98px) {
+  .news-title {
+    height: 130px;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .news-title h1 {
+    font-size: 3.5rem;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
