--- a/du_an_HTML/scss/style.scss
+++ b/du_an_HTML/scss/style.scss
@@ -35,3 +35,5 @@
 
 // 4. News
 @import "pages/news/news-title.scss";
+@import "pages/news/top-news.scss";
+@import "pages/news/posts-popular.scss";
