--- a/du_an_HTML/scss/style.scss
+++ b/du_an_HTML/scss/style.scss
@@ -37,3 +37,6 @@
 @import "pages/news/news-title.scss";
 @import "pages/news/top-news.scss";
 @import "pages/news/posts-popular.scss";
+
+// 5. Contact
+@import "pages/contact/contact-map.scss";
