--- a/du_an_HTML/css/style.css
+++ b/du_an_HTML/css/style.css
@@ -1864,5 +1864,105 @@ h6 {
     padding: 20px 0;
   }
 }
+.form-contact {
+  margin-top: 145px;
+}
+.form-contact .container .row {
+  display: flex;
+  justify-content: center;
+}
+.form-contact .container .row .info h2 {
+  font-size: 3.1rem;
+  font-weight: 800;
+  margin-bottom: 14.6px;
+}
+.form-contact .container .row .info p {
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin-bottom: 26.67px;
+}
+.form-contact .container .row .info ul li {
+  display: flex;
+  justify-content: flex-start;
+}
+.form-contact .container .row .info ul li svg {
+  margin-right: 10px;
+}
+.form-contact .container .row .info ul li p {
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+.form-contact .container .row .form .form-heading {
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.3;
+  margin-bottom: 26px;
+}
+.form-contact .container .row .form .form-group {
+  margin-bottom: 22.67px;
+}
+.form-contact .container .row .form .form-group .form-control {
+  width: 100%;
+  padding: 13.333px;
+  border: 0.833px solid #a3a3a3;
+  border-radius: 6.667px;
+}
+.form-contact .container .row .form .form-group .form-control::placeholder {
+  color: #a3a3a3;
+}
+.form-contact .container .row .form .form-group textarea {
+  margin-bottom: 3.38px;
+  min-height: 149px;
+  font-family: "Inter", sans-serif;
+  resize: none;
+}
+.form-contact .container .row .form .group-row {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 22.67px;
+}
+.form-contact .container .row .form .group-row .form-group {
+  flex-grow: 1;
+}
+.form-contact .container .row .form .form-btn {
+  display: flex;
+  justify-content: flex-end;
+}
+.form-contact .container .row .form .form-btn .btn {
+  min-width: 128px;
+  padding: 13.33px 11.67px;
+  font-weight: 700;
+  cursor: pointer;
+  display: block;
+}
+
+@media screen and (max-width: 991.98px) {
+  .form-contact {
+    margin-top: 20px;
+  }
+  .form-contact .info {
+    text-align: center;
+  }
+  .form-contact .info ul {
+    display: flex;
+    flex-direction: column;
+  }
+  .form-contact .info ul li {
+    margin: 0 auto;
+  }
+  .form-contact .form {
+    margin-top: 0;
+  }
+  .form-contact .form .form-heading {
+    text-align: center;
+  }
+  .form-contact .form .form-btn {
+    display: block;
+  }
+  .form-contact .form .form-btn .btn {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
