--- a/du_an_HTML/scss/pages/greenchop/_product-main.scss
+++ b/du_an_HTML/scss/pages/greenchop/_product-main.scss
@@ -5,7 +5,7 @@
     .cover {
         max-width: 1600px;
         height: 391.667px;
-        background-image: url("/du_an_HTML/images/family-img.png");
+        background-image: url("images/family-img.png");
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
