--- a/du_an_HTML/scss/pages/greenchop/_product-main.scss
+++ b/du_an_HTML/scss/pages/greenchop/_product-main.scss
@@ -5,11 +5,18 @@
     .cover {
         max-width: 1600px;
         height: 391.667px;
-        background-image: url("images/family-img.png");
-        background-repeat: no-repeat;
-        background-size: cover;
         position: relative;
         z-index: 1;
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -10;
+            object-fit: cover;
+        }
 
         &::after {
             content: "";
